--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body {
   display: flex;
   align-items: center;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 0.8em;
   color: #333;
 }
 
@@ -62,11 +62,11 @@ body {
 }
 
 .custom-checkbox .checkmark {
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border: 2px solid #b02e24; /* Festive red border */
   border-radius: 4px;
-  margin-right: 10px;
+  margin-right: 7px;
   position: relative;
   display: inline-block;
   background: white;
@@ -81,13 +81,13 @@ body {
 .custom-checkbox .checkmark::after {
   content: '';
   position: absolute;
-  width: 6px;
-  height: 10px;
+  width: 5px;
+  height: 8px;
   border: solid white;
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
-  top: 3px;
-  left: 6px;
+  bottom: 1px;
+  left: 2px;
   display: none;
 }
 
@@ -111,4 +111,99 @@ body {
 
 .save-button:hover {
   background-color: #8a1c1b;
+}
+
+
+@media (max-width: 768px) {
+  .movie-list-container {
+    padding: 15px 15px;
+    width: 95%; /* Adjust width for smaller screens */
+  }
+
+  .title {
+    font-size: 1.5em; /* Smaller title size */
+  }
+
+  .movie-list {
+    font-size: 0.9em; /* Adjust font size */
+  }
+
+  .custom-checkbox .checkmark {
+    width: 18px;
+    height: 18px; /* Slightly smaller checkboxes */
+  }
+
+  .save-button {
+    padding: 10px 18px; /* Smaller padding for button */
+    font-size: 0.9em;
+  }
+}
+
+@media (max-width: 480px) {
+  .background{
+    background-image: url('../public/IMG2.jpeg'); /* Add your image to the `public` folder */
+    background-size: cover;
+  }
+  .movie-list-container {
+    padding: 10px 10px;
+    width: 80%;
+  }
+
+  .title {
+    font-size: 1em;
+  }
+
+  .movie-list {
+    font-size: 0.8em;
+  }
+
+  .save-button {
+    padding: 8px 16px;
+    font-size: 0.8em;
+  }
+  .custom-checkbox {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 0.8em;
+    color: #333;
+  }
+  
+  .custom-checkbox input {
+    display: none; /* Hide the default checkbox */
+  }
+  
+  .custom-checkbox .checkmark {
+    width: 10px;
+    height: 10px;
+    border: 2px solid #b02e24; /* Festive red border */
+    border-radius: 4px;
+    margin-right: 7px;
+    position: relative;
+    display: inline-block;
+    background: white;
+    transition: background 0.3s ease, border-color 0.3s ease;
+  }
+  
+  .custom-checkbox input:checked + .checkmark {
+    background: #b02e24; /* Filled red when checked */
+    border-color: #b02e24;
+  }
+  
+  .custom-checkbox .checkmark::after {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 8px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    bottom: 1px;
+    left: 2px;
+    display: none;
+  }
+  
+  .custom-checkbox input:checked + .checkmark::after {
+    display: block;
+  }
 }
