--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
 
 /* Container for the movie list */
 .movie-list-container {
-  background: rgba(255, 255, 255, 0.85); /* Transparent background */
+  background: rgba(255, 255, 255, 0.53); /* Transparent background */
   border: 2px solid #e2aaff; /* Pinkish border to match theme */
   border-radius: 15px;
   padding: 20px;
@@ -199,13 +199,142 @@ body {
 /* Responsive styles */
 @media (max-width: 480px) {
 
-
+/* Title */
   .title {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin-bottom: 15px;
+    margin-top: 0;
+
+    color: #d55b5b; /* Festive red-pink */
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .title1 {
+    font-size: 1em;
+    margin-bottom: 10px;
+    margin-top: 0;
+    color: #d55b5b; /* Festive red-pink */
+    font-weight: bold;
+    text-align: center;
+  }
+
+  /* Container for the movie list */
+  .movie-list-container {
+    background: rgba(255, 255, 255, 0.53); /* Transparent background */
+    border: 2px solid #e2aaff; /* Pinkish border to match theme */
+    border-radius: 15px;
+    padding: 10px;
+    width: 90%; /* Adjust for responsive design */
+    max-width: 800px; /* Increased max width */
+    text-align: left;
+    font-size: 0.7em;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    box-sizing: border-box;
+  }
+
+  .movie-list-columns {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 5px; /* Spacing between items */
   }
 
   .custom-checkbox {
-    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 0.7em;
+    color: #333;
+    justify-content: flex-start;
+  }
+
+  .custom-checkbox .checkmark {
+    width: 10px;
+    min-width: 10px;
+    height: 10px;
+    border: 2px solid #d55b5b; /* Border color */
+    border-radius: 4px;
+    margin-right: 8px;
+    position: relative;
+    display: inline-block;
+    background: white;
+    transition: background 0.3s ease, border-color 0.3s ease;
+  }
+
+  .custom-checkbox .checkmark::after {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 8px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    bottom: 10px;
+    left: 1px;
+    display: none;
+  }
+
+  .corner-image-1 {
+    position: absolute;
+    top: 550px;
+    right: 40%; /* Adjust position as needed */
+    width: 80px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-2 {
+    position: absolute;
+    top: 530px;
+    right: 20%; /* Adjust position as needed */
+    width: 200px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-3 {
+    position: absolute;
+    top: 520px;
+    right: 25%; /* Adjust position as needed */
+    width: 130px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-4 {
+    position: absolute;
+    top: 385px;
+    left: 12%; /* Adjust position as needed */
+    width: 180px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-5 {
+    position: absolute;
+    top: 590px;
+    left: 17%; /* Adjust position as needed */
+    width: 150px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-6 {
+    position: absolute;
+    top: 320px;
+    left: 37%; /* Adjust position as needed */
+    width: 180px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
+  }
+  
+  .corner-image-7 {
+    position: absolute;
+    top: 200px;
+    right: 22%; /* Adjust position as needed */
+    width: 170px; /* Adjust size as needed */
+    height: auto;
+    z-index: 2;
   }
 
   .save-button {
@@ -213,3 +342,4 @@ body {
     font-size: 0.9em;
   }
 }
+
