--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body {
 .corner-image-4 {
   position: absolute;
   top: 385px;
-  left: 12%; /* Adjust position as needed */
+  left: 10%; /* Adjust position as needed */
   width: 180px; /* Adjust size as needed */
   height: auto;
   z-index: 2;
@@ -73,8 +73,8 @@ body {
 
 .corner-image-5 {
   position: absolute;
-  top: 690px;
-  left: 17%; /* Adjust position as needed */
+  top: 670px;
+  left: 13%; /* Adjust position as needed */
   width: 150px; /* Adjust size as needed */
   height: auto;
   z-index: 2;
@@ -84,7 +84,7 @@ body {
   position: absolute;
   top: 320px;
   left: 37%; /* Adjust position as needed */
-  width: 180px; /* Adjust size as needed */
+  width: 150px; /* Adjust size as needed */
   height: auto;
   z-index: 2;
 }
@@ -197,11 +197,11 @@ body {
 }
 
 /* Responsive styles */
-@media (max-width: 480px) {
+@media (max-width: 500px) {
 
 /* Title */
   .title {
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin-bottom: 15px;
     margin-top: 0;
 
@@ -211,12 +211,13 @@ body {
   }
 
   .title1 {
-    font-size: 1em;
+    font-size: 1.2em;
     margin-bottom: 10px;
     margin-top: 0;
     color: #d55b5b; /* Festive red-pink */
     font-weight: bold;
     text-align: center;
+    width: 300px;
   }
 
   /* Container for the movie list */
@@ -228,7 +229,7 @@ body {
     width: 90%; /* Adjust for responsive design */
     max-width: 800px; /* Increased max width */
     text-align: left;
-    font-size: 0.7em;
+    font-size: 0.8em;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
   }
@@ -276,7 +277,7 @@ body {
 
   .corner-image-1 {
     position: absolute;
-    top: 550px;
+    top: 700px;
     right: 40%; /* Adjust position as needed */
     width: 80px; /* Adjust size as needed */
     height: auto;
